--- a/docker/cpu/docker-compose.yml
+++ b/docker/cpu/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ../..
       dockerfile: docker/cpu/Dockerfile
     volumes:
-      - ../../api:/app/api
+      - /home/limcheekin/docker/volumes/fast-kokoro/api:/app/api
     ports:
       - "8884:8880"
     environment:
